2022-09-27T08:35:23Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3134127119
* notice: last 14d: unq all: 2 30
* notice: prev accum: outdated-unq outdated-all / unq all: 35 144 / 50 173
* notice: next accum: outdated-unq outdated-all / unq all: 35 144 / 51 174
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-27]

2022-09-27T02:10:37Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3132452838
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 34 142 / 50 173
* notice: next accum: outdated-unq outdated-all / unq all: 35 144 / 50 173
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2022-09-12] / [2022-09-13]

2022-09-26T16:32:18Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3129441066
* notice: last 14d: unq all: 2 31
* notice: prev accum: outdated-unq outdated-all / unq all: 34 142 / 50 172
* notice: next accum: outdated-unq outdated-all / unq all: 34 142 / 50 173
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-09-26]

2022-09-26T08:30:04Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3126224293
* notice: last 14d: unq all: 2 30
* notice: prev accum: outdated-unq outdated-all / unq all: 34 142 / 49 172
* notice: next accum: outdated-unq outdated-all / unq all: 34 142 / 50 172
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-12 2022-09-26]

2022-09-25T16:28:45Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3122867106