@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-27T08:35:23Z",
+  "timestamp" : "2022-09-27T16:35:56Z",
   "count_outdated" : 144,
   "uniques_outdated" : 35,
-  "count" : 174,
+  "count" : 175,
   "uniques" : 51,
   "clones" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-09-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
