@@ -1,3 +1,11 @@
+2022-09-27T16:35:56Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3137349470
+* notice: last 14d: unq all: 2 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 35 144 / 51 174
+* notice: next accum: outdated-unq outdated-all / unq all: 35 144 / 51 175
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-27]
+
 2022-09-27T08:35:23Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3134127119
 * notice: last 14d: unq all: 2 30
